--- a/team_project/package.json
+++ b/team_project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final",
+  "name": "team_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,14 +7,9 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.2",
-    "http-proxy-middleware": "^3.0.5",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-kakao-maps-sdk": "^1.2.0",
-    "react-router-dom": "^7.10.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "json-server": "^1.0.0-beta.3"
   }
 }
